--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,6 @@ linter:
     stage: lint
     image: pipelinecomponents/php-codesniffer:latest
     script:
-        - php phpcbf.phar --extentions=php --standard=PSR2
+        - php phpcs.phar --extentions=php --standard=PSR2
     tags:
         - lint
