--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ linter:
     stage: lint
     image: pipelinecomponents/php-codesniffer:latest
     script:
-        - php phpcs.phar --extentions=php --standard=PSR2
+        - php phpcbf.phar --extensions=php --standard=PSR2
 
 # deployToAWS:
 #     only:
