--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,10 @@ linter:
     stage: lint
     image: pipelinecomponents/php-codesniffer:latest
     script:
-        - php phpcs.phar --extensions=php --standard=PSR2 .
+        - phpcs --config-set default_standard Squiz
+        - phpcs --config-set report_format summary
+        - phpcs --config-set show_warnings 0
+        - phpcs --standard=PSR2 .
 
 # deployToAWS:
 #     only:
