--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,9 @@ linter:
         - phpcs --config-set show_warnings 0
         - phpcs --standard=PSR2 .
 
-# deployToAWS:
-#     only:
-#         - master
-#     stage: deploy
-#     script:
-#         - bash deploy/deploy.sh
+deployToAWS:
+    only:
+        - master
+    stage: deploy
+    script:
+        - bash deploy/deploy.sh
